# docs/swagger.json
@@ -261,7 +261,7 @@
                 }
             },
             "delete": {
-                "description": "根据账号 ID 删除账号，已分配角色的账号不能直接删除",
+                "description": "根据账号 ID 删除账号，并清理账号角色关系",
                 "consumes": [
                     "application/json"
                 ],
@@ -972,12 +972,8 @@
         "dto.GetSysAccountPageDTO": {
             "type": "object",
             "properties": {
-                "email": {
-                    "description": "邮箱",
-                    "type": "string"
-                },
-                "mobile": {
-                    "description": "手机号",
+                "keyword": {
+                    "description": "用户名,邮箱,手机号码",
                     "type": "string"
                 },
                 "pageNumber": {
@@ -989,10 +985,6 @@
                 "status": {
                     "description": "状态1是正常,2是禁用",
                     "type": "integer"
-                },
-                "username": {
-                    "description": "登录帐号",
-                    "type": "string"
                 }
             }
         },
